--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "backend": "json-server --watch db.json --port 5000",
+    "start": "node backend/index.js",
+    "backend": "node backend/index.js",
+    "dev": "concurrently \"npm run backend\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
